# stock-market

./: .gitignore  README.md  compose.yml  extract.sh  pyproject.toml
api/: Dockerfile  README.md  database.py  main.py  pyproject.toml
api/routers/: stocks.py
api/src/stocks/models/: Competitor.py  MarketCap.py  Performance.py  PerformanceData.py  Stock.py  StockUpdate.py  StockValue.py  StockValues.py  __init__.py
crawlers/: pyproject.toml
crawlers/stock_market/: settings.py
crawlers/stock_market/mock_data/: market_watch_list.html  market_watch_page.html  stocks.json
crawlers/stock_market/stock_market/: items.py  middlewares.py  pipelines.py  settings.py
crawlers/stock_market/stock_market/parsers/: MarketWatchListParser.py  MarketWatchPageParser.py
crawlers/stock_market/stock_market/spiders/: market_watch.py  polygon.py
crawlers/stock_market/test/: test_market_watch_parser.py
etl/: main.py  pyproject.toml
etl/src/: database.py
etl/src/models/: MarketCap.py  Performance.py  Stock.py  __init__.py
